keysboard/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keysboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keysboard
  template:
    metadata:
      labels:
        app: keysboard
    spec:
      containers:
      - name: keysboard
        image: ghcr.io/pmh-only/keysboard
        resources:
          requests:
            cpu: 10m
            memory: 50MiB
          limits:
            cpu: 10m
            memory: 50MiB
