keysboard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: keysboard-service
spec:
  selector:
    app: keysboard
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
