keysboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keysboard-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - keys.pmh.codes
    secretName: keysboard-ingress-tls
  ingressClassName: nginx
  rules:
  - host: keys.pmh.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keysboard-service
            port:
              number: 3000
